sam-template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: >
  aws-lambda

  WCIVF Template for aws-lambda

# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
Globals:
  Function:
    Timeout: 240

Parameters:

  AppDjangoSettingsModule:
    Description: "The DJANGO_SETTINGS_MODULE environment variable passed to the app."
    Type: String

  AppRdsHost:
    Description: "The RDS_HOST environment variable passed to the app."
    Type: String

  AppRdsDbName:
    Description: "The RDS_DB_NAME environment variable passed to the app."
    Type: String

  AppRdsDbPassword:
    Description: "The DB_PASSWORD environment variable passed to the app."
    Type: String

  AppSentryDsn:
    Description: "The SENTRY_DSN environment variable passed to the app."
    Type: String

  AppSecretKey:
    Description: "The django SECRET_KEY environment variable passed to the app."
    Type: String

  AppDcEnvironment:
    Description: "The DC_ENVIRONMENT environment variable passed to the app."
    Type: String

  VpcIdParameter:
    Description: "VPC ID"
    Type: String

  SubnetIdsParameter:
    Description: "List of subnet IDs"
    Type: CommaDelimitedList

  SSLCertificateArn:
    Description: "SSL Certificate ARN"
    Type: String

  InstanceType:
    Description: "The instance type to be used"
    Type: String

  Domain:
    Description: "The domain to be used"
    Type: String

  AppSlackFeedbackWebhookUrl:
    Description: "Webhook url used to send feeback entries to Slack"
    Type: String

  AppYnrApiKey:
    Description: "API key used to import data from YNR"
    Type: String

  WebACLArn:
    Description: >
      ARN of the CloudFront WAF WebACL (from the WebACLArn output of
      waf-template.yaml, deployed separately in us-east-1). Leave blank to
      deploy without WAF protection attached.
    Type: String
    Default: ""

Conditions:
  HasWebAcl: !Not [!Equals [!Ref WebACLArn, ""]]

Resources:
  WCIVFControllerFunction:
    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
    Metadata:
      BuildMethod: makefile
    Properties:
      FunctionName: WCIVFControllerFunction
      Role: !Sub "arn:aws:iam::${AWS::AccountId}:role/WCIVFLambdaExecutionRole"
      CodeUri: .
      Handler: wcivf.lambda_handler.handler
      MemorySize: 256
      Runtime: python3.12
      Timeout: 720
      Environment:
        Variables:
          DJANGO_SETTINGS_MODULE: !Ref AppDjangoSettingsModule
          RDS_HOST: !Ref AppRdsHost
          RDS_DB_NAME: !Ref AppRdsDbName
          RDS_DB_PASSWORD: !Ref AppRdsDbPassword
          SENTRY_DSN: !Ref AppSentryDsn
          SECRET_KEY: !Ref AppSecretKey
          DC_ENVIRONMENT: !Ref AppDcEnvironment
          SLACK_FEEDBACK_WEBHOOK_URL: !Ref AppSlackFeedbackWebhookUrl
          YNR_API_KEY: !Ref AppYnrApiKey
          IGNORE_ROUTERS: "1"
      Tags:
        dc-environment: !Ref AppDcEnvironment
        dc-product: wcivf
        CreatedVia: CloudFormation
      Events:
        WCIVFJobsQueueEvent:
          Type: SQS
          Properties:
            Queue: !GetAtt WCIVFJobsQueue.Arn

  WCIVFCodeDeployApp:
    Type: AWS::CodeDeploy::Application
    Properties:
      ApplicationName: WCIVFCodeDeploy
      ComputePlatform: Server
      # cannot apply tags without recreating - applied in console

  ElbHTTPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'HTTP traffic'
      GroupName: 'Elb Security Group'
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId: !Ref VpcIdParameter
      Tags:
        - Key: dc-environment
          Value: !Ref AppDcEnvironment
        - Key: dc-product
          Value: wcivf
        - Key: CreatedVia
          Value: CloudFormation

  InstanceHTTPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Allow HTTP and HTTPS access for an instance from the ALB security group'
      GroupName: 'InstanceHTTPSecurityGroup'
      SecurityGroupIngress:
        - FromPort: 8000
          IpProtocol: tcp
          SourceSecurityGroupId: !Ref ElbHTTPSecurityGroup
          ToPort: 8000
        - FromPort: 80
          IpProtocol: tcp
          SourceSecurityGroupId: !Ref ElbHTTPSecurityGroup
          ToPort: 80
        - FromPort: 443
          IpProtocol: tcp
          SourceSecurityGroupId: !Ref ElbHTTPSecurityGroup
          ToPort: 443
      VpcId: !Ref VpcIdParameter
      Tags:
        - Key: dc-environment
          Value: !Ref AppDcEnvironment
        - Key: dc-product
          Value: wcivf
        - Key: CreatedVia
          Value: CloudFormation

  WCIVFTargetGroup:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: "/_status_check/"
      Port: 8000
      Protocol: "HTTP"
      HealthCheckPort: "traffic-port"
      HealthCheckProtocol: "HTTP"
      HealthCheckTimeoutSeconds: 5
      UnhealthyThresholdCount: 5
      TargetGroupAttributes:
      - Key: deregistration_delay.timeout_seconds
        Value: 30
      TargetType: "instance"
      Matcher:
        HttpCode: "200"
      HealthyThresholdCount: 2
      VpcId: !Ref VpcIdParameter
      Name: "wcivf-alb-tg"
      HealthCheckEnabled: true
      Tags:
        - Key: dc-environment
          Value: !Ref AppDcEnvironment
        - Key: dc-product
          Value: wcivf
        - Key: CreatedVia
          Value: CloudFormation

  ApplicationLoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      Name: "wcivf-alb"
      Scheme: "internet-facing"
      Type: "application"
      SecurityGroups:
        - !Ref ElbHTTPSecurityGroup
      IpAddressType: "ipv4"
      Subnets: !Ref SubnetIdsParameter
      Tags:
        - Key: dc-environment
          Value: !Ref AppDcEnvironment
        - Key: dc-product
          Value: wcivf
        - Key: CreatedVia
          Value: CloudFormation

  HTTPListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: "HTTP"
      DefaultActions:
        - Order: 2
          TargetGroupArn: !Ref WCIVFTargetGroup
          Type: "forward"

  WWWRedirectListenerRule:
    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
    Properties:
      Actions:
        - Type: redirect
          RedirectConfig:
            Host: !Ref Domain
            Path: "/#{path}"
            Port: 443
            Protocol: HTTPS
            Query: "#{query}"
            StatusCode: HTTP_301
      Conditions:
        - Field: host-header
          HostHeaderConfig:
            Values:
              - !Sub 'www.${Domain}'
      ListenerArn: !Ref HTTPListener
      Priority: 1




  WCIVFLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: wcivf
      LaunchTemplateData:
        BlockDeviceMappings:
          - DeviceName: /dev/sda1
            Ebs:
              VolumeSize: 35
              VolumeType: gp2
              DeleteOnTermination: true
        NetworkInterfaces:
          - DeviceIndex: 0
            AssociatePublicIpAddress: true
            Groups:
              - !Ref InstanceHTTPSecurityGroup
        # This is needed as it has permissions needed for the instance
        # TODO create new role without packer permissions
        IamInstanceProfile:
          Name: 'CodeDeploy-EC2-Instance-Profile'
        # output of
        # https://eu-west-2.console.aws.amazon.com/imagebuilder/home?region=eu-west-2#/images/arn%3Aaws%3Aimagebuilder%3Aeu-west-2%3A743524368797%3Aimage%2Fdcbaseimage-ubuntu-24-04%2F0.0.5%2F1/details?region=eu-west-2
        ImageId: 'ami-0ba733fad91c85650'
        InstanceType: !Ref InstanceType
        MetadataOptions:
          InstanceMetadataTags: enabled
          HttpEndpoint: enabled
      TagSpecifications:
        - ResourceType: launch-template
          Tags:
            - Key: dc-environment
              Value: !Ref AppDcEnvironment
            - Key: dc-product
              Value: wcivf
            - Key: CreatedVia
              Value: CloudFormation

  CloudFrontDistribution:
    Type: 'AWS::CloudFront::Distribution'
    Properties:
      DistributionConfig:
        Comment: 'Cloudfront Distribution pointing to the ALB origin'
        Origins:
          - Id: Static
            DomainName: !GetAtt ApplicationLoadBalancer.DNSName
            CustomOriginConfig:
              OriginProtocolPolicy: "http-only"
            OriginCustomHeaders:
              - HeaderName: X-Forwarded-Host
                HeaderValue: !Ref Domain
              - HeaderName: X-Forwarded-Proto
                HeaderValue: https
            OriginShield:
              Enabled: true
              OriginShieldRegion: eu-west-2

          - Id: Dynamic
            DomainName: !GetAtt ApplicationLoadBalancer.DNSName
            CustomOriginConfig:
              OriginProtocolPolicy: "http-only"
            OriginCustomHeaders:
              - HeaderName: X-Forwarded-Host
                HeaderValue: !Ref Domain
              - HeaderName: X-Forwarded-Proto
                HeaderValue: https

        Enabled: true
        # CloudFront WAF WebACL (scope CLOUDFRONT, lives in us-east-1).
        # Defined in waf-template.yaml and passed in via the WebACLArn parameter.
        WebACLId: !If [HasWebAcl, !Ref WebACLArn, !Ref "AWS::NoValue"]
        HttpVersion: 'http2'
        Aliases:
          - !Ref Domain
          - !Sub "www.${Domain}"
        PriceClass: "PriceClass_100"
        ViewerCertificate:
          AcmCertificateArn: !Ref SSLCertificateArn
          MinimumProtocolVersion: TLSv1.1_2016
          SslSupportMethod: sni-only

        DefaultCacheBehavior:
          AllowedMethods: [ GET, HEAD, OPTIONS, PUT, POST, PATCH, DELETE ]
          TargetOriginId: Dynamic
          ForwardedValues:
            QueryString: true
            Cookies:
              Forward: "all"
            Headers:
              - Authorization
              - Origin
              - Referer
              - CloudFront-Forwarded-Proto
          ViewerProtocolPolicy: "redirect-to-https"

        CacheBehaviors:
          # Don't cache the candidates_for_ballots endpoint
          - PathPattern: api/candidates_for_ballots/*
            AllowedMethods: [ GET, HEAD, OPTIONS ]
            TargetOriginId: Dynamic
            ViewerProtocolPolicy: redirect-to-https
            # AWS Managed: CachingDisabled
            CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad
            # AWS Managed: AllViewerExceptHostHeader
            OriginRequestPolicyId: b689b0a8-53d0-40ab-baf2-68738e2966ac

          # Don't cache the last-updated-timestamps endpoint
          - PathPattern: api/last-updated-timestamps/*
            AllowedMethods: [ GET, HEAD, OPTIONS ]
            TargetOriginId: Dynamic
            ViewerProtocolPolicy: redirect-to-https
            # AWS Managed: CachingDisabled
            CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad
            # AWS Managed: AllViewerExceptHostHeader
            OriginRequestPolicyId: b689b0a8-53d0-40ab-baf2-68738e2966ac

          - AllowedMethods: [ GET, HEAD, OPTIONS ]
            PathPattern: static/*
            TargetOriginId: Static
            Compress: true
            ForwardedValues:
              QueryString: true
              Cookies:
                Forward: none
              Headers:
                - Authorization
                - Origin
            ViewerProtocolPolicy: "redirect-to-https"
            MinTTL: '50'

  DnsRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      AliasTarget:
        DNSName: !GetAtt CloudFrontDistribution.DomainName
        HostedZoneId: Z2FDTNDATAQYW2 # this is an AWS-owned, global singleton required for Aliases to CloudFront
      HostedZoneName: !Sub "${Domain}."
      Name: !Sub "${Domain}."
      Type: A
  
  WWWDnsRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      AliasTarget:
        DNSName: !GetAtt CloudFrontDistribution.DomainName
        HostedZoneId: Z2FDTNDATAQYW2 # this is an AWS-owned, global singleton required for Aliases to CloudFront
      HostedZoneName: !Sub "${Domain}."
      Name: !Sub "www.${Domain}."
      Type: A
  # SQS queue for running background jobs, with a dead letter queue for failed jobs
  WCIVFJobsDlq:
      Type: AWS::SQS::Queue
      Properties:
        QueueName: wcivf-jobs-dlq.fifo
        FifoQueue: true
        ContentBasedDeduplication: true

  WCIVFJobsQueue:
    Type: AWS::SQS::Queue
    Properties:
      QueueName: wcivf-jobs.fifo
      FifoQueue: true
      ContentBasedDeduplication: true
      # This should be comfortably larger than the Lambda timeout.
      # AWS guidance is to make this larger, often much larger, than the function timeout.
      VisibilityTimeout: 1500
      ReceiveMessageWaitTimeSeconds: 20
      RedrivePolicy:
        deadLetterTargetArn: !GetAtt WCIVFJobsDlq.Arn
        maxReceiveCount: 5

  WCIVFJobsQueuePolicy:
    Type: AWS::SQS::QueuePolicy
    Properties:
      Queues:
        - !Ref WCIVFJobsQueue
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Sid: AllowEventBridgeToSend
            Effect: Allow
            Principal:
              Service: events.amazonaws.com
            Action: sqs:SendMessage
            Resource: !GetAtt WCIVFJobsQueue.Arn
  # Rules to trigger background jobs
  ImportPeopleRecentlyUpdatedRule:
    Type: AWS::Events::Rule
    Properties:
      Name: import-people-recently-updated-rule
      Description: Update all people updated in YNR recently
      ScheduleExpression: cron(*/5 * ? * * *)
      State: ENABLED
      Targets:
        - Id: WCIVFJobsQueue
          Arn: !GetAtt WCIVFJobsQueue.Arn
          SqsParameters:
            MessageGroupId: wcivf-jobs
          Input: '{"command": "import_people", "args": ["--recently-updated"]}'

  DeleteDeletedPeopleRule:
    Type: AWS::Events::Rule
    Properties:
      Name: delete-deleted-people-rule
      Description: Deletes people deleted in YNR in the last hour
      ScheduleExpression: rate(1 hour)
      State: ENABLED
      Targets:
        - Id: WCIVFJobsQueue
          Arn: !GetAtt WCIVFJobsQueue.Arn
          SqsParameters:
            MessageGroupId: wcivf-jobs
          Input: '{"command": "delete_deleted_people"}'

  ImportBallotsRecentlyUpdatedRule:
    Type: AWS::Events::Rule
    Properties:
      Name: import-ballots-recently-updated-rule
      Description: Update all ballots updated in YNR recently
      ScheduleExpression: cron(2-57/5 * ? * * *)
      State: ENABLED
      Targets:
        - Id: WCIVFJobsQueue
          Arn: !GetAtt WCIVFJobsQueue.Arn
          SqsParameters:
            MessageGroupId: wcivf-jobs
          Input: '{"command": "import_ballots", "args": ["--recently-updated"]}'

  ImportPartiesRule:
    Type: AWS::Events::Rule
    Properties:
      Name: import-parties-rule
      Description: Import parties
      ScheduleExpression: rate(1 day)
      State: ENABLED
      Targets:
        - Id: WCIVFJobsQueue
          Arn: !GetAtt WCIVFJobsQueue.Arn
          SqsParameters:
            MessageGroupId: wcivf-jobs
          Input: '{"command": "import_parties"}'

  ImportNationalPartiesRule:
    Type: AWS::Events::Rule
    Properties:
      Name: import-national-parties-rule
      Description: Import national parties
      ScheduleExpression: rate(6 hours)
      State: ENABLED
      Targets:
        - Id: WCIVFJobsQueue
          Arn: !GetAtt WCIVFJobsQueue.Arn
          SqsParameters:
            MessageGroupId: wcivf-jobs
          Input: '{"command": "import_national_parties"}'

  BatchFeedbackToSlackRule:
    Type: AWS::Events::Rule
    Properties:
      Name: batch-feedback-to-slack-rule
      Description: Send feedback entries for the last 24 hours to slack
      ScheduleExpression: cron(0 9 ? * * *)
      State: ENABLED
      Targets:
        - Id: WCIVFJobsQueue
          Arn: !GetAtt WCIVFJobsQueue.Arn
          SqsParameters:
            MessageGroupId: wcivf-jobs
          Input: '{"command": "batch_feedback_to_slack", "args": ["--hours=24"]}'

  ImportLeafletsRule:
    Type: AWS::Events::Rule
    Properties:
      Name: import-leaflets-rule
      Description: Import leaflets
      ScheduleExpression: rate(1 hour)
      State: ENABLED
      Targets:
        - Id: WCIVFJobsQueue
          Arn: !GetAtt WCIVFJobsQueue.Arn
          SqsParameters:
            MessageGroupId: wcivf-jobs
          Input: '{"command": "import_leaflets"}'

  ImportWikipediaBiosRule:
    Type: AWS::Events::Rule
    Properties:
      Name: import-wikipedia-bios-rule
      Description: Import wikipedia bio extracts
      ScheduleExpression: cron(0 9 * * ? *)
      State: ENABLED
      Targets:
        - Id: WCIVFJobsQueue
          Arn: !GetAtt WCIVFJobsQueue.Arn
          SqsParameters:
            MessageGroupId: wcivf-jobs
          Input: '{"command": "import_wikipedia_bios", "args": ["--current"]}'

  ILPGlobalRule:
    Type: AWS::Events::Rule
    Properties:
      Name: import-local-parties-global-rule
      Description: Import LocalParty objects from google spreadsheets
      ScheduleExpression: rate(1 hour)
      State: ENABLED
      Targets:
        - Id: WCIVFJobsQueue
          Arn: !GetAtt WCIVFJobsQueue.Arn
          SqsParameters:
            MessageGroupId: wcivf-jobs
          Input: '{"command": "import_local_parties", "args": ["--date=2026-05-07"]}'
Outputs:
  WCIVFControllerFunctionArn:
    Description: "WCIVF Controller Lambda Function ARN"
    Value: !GetAtt WCIVFControllerFunction.Arn
